fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,7 @@ body {
   background-color: rgb(16, 16, 97);
   background-image: url("../img/space_bg_2.jpg");
   background-size: cover;
-  overflow-y: hidden;
-  overflow-x: auto;
+  overflow: hidden;
 }
 
 .main {
